10. If the initial start-up connection fails, try again every .5 second for a
    few seconds.
11. In playlists page, internet, etc, allow back navigation to go fully back.
12. Don't try to seek if no song loaded.
13. Only use menubar for macOS builds.
14. Smart playlists - like dynamic, but do not auto update.
15. Use em-dash to as separator.

2.1.0
-----
 1. Re-add all album sorts from Cantata 1.x
 2. Try to detect DLNA streams (e.g. when using upmpdcli), and show as regular
    albums in grouped view.
 3. Add filename / path to list of dynamic rule properties.
 4. Flat current track highlight.
 5. When adding tracks from folders view, only add playlists if these have been
    explicitly selected.
 6. Allow to set keyboard shortcuts for ratings actions. Default to Alt+0 (No
    rating), Alt+1 (1 star), etc.
 7. Re-add genre combo to library view. Only visible if grouping by artist or
    album.
 8. When adding a podcast (or other track from an internet service), remove
    any new-lines from metadata.
 9. When configuring streams, clear list of providers before re-populating.
10. If a 'Basic' mode connection fails, re-start spawned MPD instance (and
    remove any previous pid file).
11. Fix Jamendo and Magnatune covers.
12. Fix various issues with 'Personal' MPD instance.
13. Fix saving, and restoring, of podcast 'played' status.
14. When adding streams to play queue via add dialog, always allow setting of
    name.
15. Use Pulse Audio for 'Personal' MPD instance.
16. Always return true for MPRIS CanPlay, CanPause, etc.
17. Work-around KDE 5.7 MPRIS issues.
18. If can't load SQLite db, then show error.
19. Don't show custom actions menu entry if there are no actions.
20. Fix add/set priority menus.
21. Match view mono icons to text colour.
22. Use FontAwesome icons for all action icons.
23. Send a message at least once every 5 seconds to MPD, to ensure connection
    is still valid.
24. Fix updating of playlists if these contain duplicates and are modified by